web template added all pages

--- a/americanSignLanguage/static/assets_final/css/custom.css
+++ b/americanSignLanguage/static/assets_final/css/custom.css
@@ -29,5 +29,17 @@
 }
 
 .team {
+    margin-top: 30px;
+}
+
+.about {
     margin-top: 40px;
+}
+
+.member-img {
+    height: 50vh;
+}
+
+.hypertalk-logo {
+    border-radius: 10px;
 }
