--- a/americanSignLanguage/static/assets_final/css/custom.css
+++ b/americanSignLanguage/static/assets_final/css/custom.css
@@ -47,4 +47,20 @@
 .custom-modal .modal-dialog {
     max-width: 700px;
   }
+
+
+  @media only screen and (max-width: 990px) {
+    .logo-img {
+        display: none;
+    }
+
+    #hero {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+      
+
+  }
   
