--- a/americanSignLanguage/static/assets_final/css/custom.css
+++ b/americanSignLanguage/static/assets_final/css/custom.css
@@ -1,5 +1,3 @@
-
-
 .hero-overlay {
     position: absolute;
     top: 0;
@@ -7,8 +5,8 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-  }
-  
+}
+
 
 .white-text {
     color: #fff !important;
@@ -46,10 +44,18 @@
 
 .custom-modal .modal-dialog {
     max-width: 700px;
-  }
+}
+
+.main-btns {
+    display: flex;
+}  
+
+.btn-services {
+    margin-left: 20px;
+}
 
 
-  @media only screen and (max-width: 990px) {
+@media only screen and (max-width: 990px) {
     .logo-img {
         display: none;
     }
@@ -59,8 +65,33 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-      }
-      
+    }
 
-  }
-  
+    .main-btns {
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+        margin-top: 10px;
+    }
+
+    .btn {
+        width: 80% !important;
+    }
+
+    .btn-services {
+        margin-left: 0;
+        margin-top: 15px;
+    }
+
+    .contact-about {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+    .info {
+        display: none;
+    }
+
+}
